<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:columnCount="3"
    tools:context="com.farzam.financialassistant.EditGoalFragment">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/edit_goal_txt"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:textSize="18sp"
        android:text="@string/new_goal_txt"/>
    <Space
        android:layout_row="0"
        android:layout_column="1"
        android:layout_width="30dp"/>

    <EditText
        android:id="@+id/edit_goal_title"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"/>
    <TextView
        android:id="@+id/edit_goal_value"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:layout_column="0"
        android:textSize="18sp"
        android:text="@string/new_goal_value"/>
    <Space
        android:layout_row="1"
        android:layout_column="1"
        android:layout_width="30dp"/>
    <EditText
        android:id="@+id/edit_goal_amount"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"/>
    <TextView
        android:id="@+id/edit_goal_date"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:textSize="18sp"
        android:text="@string/new_goal_date"/>
    <Space
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="30dp"/>

    <EditText
        android:id="@+id/edit_goal_deadline"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"
        android:focusable="false"/>

    <Button
        android:id="@+id/edit"
        android:text="@string/edit"
        android:layout_gravity="right"/>
    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_column="2"
        android:layout_gravity="left"/>


</GridLayout>
