<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!--
    <item android:id="@+id/edit_goal"
        android:title="@string/editGoal"
        android:icon="@drawable/edit"
        android:showAsAction="always"
        android:focusable="false"/>
        -->
    <item android:id="@+id/home"
        android:title="@string/editGoal"
        android:icon="@drawable/ic_home_black_24dp"
        android:showAsAction="always"
        android:focusable="false"/>
    <item android:id="@+id/new_goal"
        android:title="@string/newGoal"
        android:icon="@drawable/ic_action_new_event"
        android:showAsAction="always"
        android:focusable="false"/>
    <item android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:showAsAction="always"
        android:focusable="false"/>


</menu>