<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"

    tools:context="com.farzam.financialassistant.GoalHeaderFragment">

    <TextView
        android:id="@+id/goal_fixed_title"
        android:text="@string/goal_f_title"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"/>
    <TextView
        android:id="@+id/goal_fixed_amount"
        android:text="@string/goal_f_amount"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"/>
    <TextView
        android:id="@+id/goal_fixed_date"
        android:text="@string/goal_f_date"
        android:layout_gravity="fill_horizontal"
        android:gravity="left"
        android:textSize="16sp"
        android:textColor="#223246"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"
        android:layout_columnWeight="0.25"/>
    <TextView
        android:id="@+id/goal_fixed_total"
        android:text="@string/goal_f_total"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/goalH"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"/>
    <TextView
        android:id="@+id/goalA"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"/>
    <TextView
        android:id="@+id/goalD"
        android:layout_gravity="fill_horizontal"
        android:textSize="16sp"
        android:textColor="#223246"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="25dp"
        android:layout_width="wrap_content"
        android:layout_columnWeight="0.25"/>
    <TextView
        android:id="@+id/goalT"
        android:layout_columnWeight="0.25"
        android:textSize="16sp"
        android:textColor="#223246"
        android:layout_gravity="fill_horizontal"
        android:width="0dp"
        android:layout_columnSpan="1"
        android:layout_height="30dp"
        android:layout_width="wrap_content"/>

</GridLayout>
